Commit creacion aplicacion peia

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 
 
-        <div class="logo">
+        <div class="logo"
+             style="background-color: #81ca83d1 !important;">
             <div class="logo-normal">
                 <a  class="simple-text">
                    Cajero Automatico
@@ -16,7 +17,7 @@
         </div>
 
 
-        <div class="sidebar-wrapper">
+        <div class="sidebar-wrapper" style="background-color:#81ca83d1 !important">
 
             <div class="user">
                 <div class="photo">
