--- a/src/app/app-peia/adminpeia/adminpeia.component.html
+++ b/src/app/app-peia/adminpeia/adminpeia.component.html
@@ -10,7 +10,7 @@
 				<!--Seccion registro de billetes -->
 					<div class="col-md-12">
 						<div class="card">
-							<div class="card-header card-header-icon" data-background-color="rose">
+							<div class="card-header card-header-icon" data-background-color="green">
 								<i class="material-icons">contacts</i>
 							</div>
 							<div class="card-content">
@@ -65,7 +65,7 @@
 				<!-- Seccion tabla de bonos registrados -->
 
 					<div class="card">
-						<div class="card-header card-header-icon" data-background-color="rose">
+						<div class="card-header card-header-icon" data-background-color="green">
 							<i class="material-icons">assignment</i>
 						</div>
 						<div class="card-content">
