--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/#/dashboard">Cajero Automatico - Bonos Universidad Simon Bolivar</a>
+                <a class="navbar-brand" href="/#/dashboard">Cajero Automatico - Universidad Simon Bolivar</a>
             </div>
         </div>
     </nav>
